--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/judyz01/sorting-visualizer",
+  "homepage": "http://judyz01.github.io/sorting-visualizer",
   "name": "algo-visualizer",
   "version": "0.1.0",
   "private": true,
